--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,11 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "icon-192.png",
+        "src": "icon_4_chrono_2.png",
         "sizes": "192x192",
         "type": "image/png"
       }
     ]
   }
+
   
