--- a/v4/manifest.json
+++ b/v4/manifest.json
@@ -3,6 +3,7 @@
     "short_name": "Chronos",
     "start_url": ".",
     "display": "standalone",
+    "orientation": "portrait",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "icons": [
@@ -15,4 +16,5 @@
   }
 
   
+
 
