--- a/Peter/manifest.json
+++ b/Peter/manifest.json
@@ -1,1 +1,21 @@
+{
+  "name": "Balance connectée",
+  "short_name": "Balance",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#2c7be5",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
 
