--- a/Peter/manifest.json
+++ b/Peter/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#2c7be5",
   "icons": [
     {
-      "src": "Balance_connnectee.png",
+      "src": "Balance_connnectee_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "Balance_connnectee.png",
+      "src": "Balance_connnectee_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
